# simply-eda-app

./: Makefile  README.md  app.py  correlations.py  data_load.py  data_summary.py  dtale_app.py  lift_analysis.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py  correlations.py  data_load.py  data_summary.py  iv_analysis.py  lift_analysis.py  plots.py
